--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
 
+    <!-- Jquery library -->
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+
 </head>
 <body>
     <div class="scroll-up-btn">
@@ -142,7 +146,7 @@
 		</div>
 	</section>
 
-    <!-- teams section start -->
+    <!-- team section start -->
     <section class="teams" id="teams">
         <div class="max-width">
             <h2 class="title">فريقنا</h2>
@@ -194,25 +198,26 @@
                 </div>
                 <div class="column right">
                     <div class="text">أرسلوا لنا طلباتكم</div>
-                    <form action="#">
+                    <form action="https://formspree.io/f/moqrvebq"
+                    method="POST" >
                         <div class="fields">
-                            <div class="field email">
-                                <input style="direction: rtl;" type="email" placeholder="البريد الالكتروني" required>
+                            <div class="field name">
+                                <input class="email" name="email" style="direction: rtl;" type="email" placeholder="البريد الالكتروني" required>
                             </div>
                             
-                                <div class="field name">
-                                    <input style="direction: rtl;" type="text" placeholder="الاسم الشخصي" required>
+                                <div class="field email">
+                                    <input class="name" name="name" style="direction: rtl;" type="text" placeholder="الاسم الشخصي" required>
                                 </div>
                         </div>
 
                         <div class="field">
-                            <input style="direction: rtl;" type="text" placeholder="موضوع الطلب" required>
+                            <input class="subject" style="direction: rtl;" name="subject" type="text" placeholder="موضوع الطلب" required>
                         </div>
                         <div class="field textarea">
-                            <textarea style="direction: rtl;" cols="30" rows="10" placeholder="الطلب" required></textarea>
+                            <textarea class="request" style="direction: rtl;" name="message" cols="30" rows="10" placeholder="الطلب" required></textarea>
                         </div>
                         <div class="button-area">
-                            <button type="submit">Send message</button>
+                            <button type="submit" class="submit">ارسال الطلب</button>
                         </div>
                     </form>
                 </div>
