--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h2 class="title">من نحن؟</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile-1.jpeg" alt="">
+                    <img src="images/l3.png" alt="">
                 </div>
                 <div class="column right" >
                     <div class="text" id="whoarewe" >نحن  Tea Team <span class="typing-2"></span>  </div>
